# mcp-pool

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bacon.toml  clippy.toml  dev.ps1  dev.sh
.github/: lsp.json
plans/: 001-mcp-pool-reliability-parity.md  README.md
src/: cli.rs  config.rs  control.rs  daemon.rs  diagnostics.rs  jsonrpc.rs  main.rs  mcp_session.rs  pool.rs  proxy.rs  socket_proxy.rs  transport.rs  types.rs  upstream.rs
