[package]
name = "mcp-pool"
version = "0.1.0"
edition = "2024"
description = "Standalone CLI for pooling MCP servers (one upstream, many clients)"
authors = ["Aditya Sharma"]
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "io-std", "sync", "time", "fs"] }
toml = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("cargo-clippy"))',
] }

[lints.clippy]
dbg_macro = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
todo = "deny"

[profile.release]
opt-level = 2
